# PthreadKeyDetect

./: README.md  build.gradle  deps.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vompom/pthread_available/: MainActivity.kt  MyApplication.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
lib_pthread_key/: CMakeLists.txt  build.gradle
lib_pthread_key/src/main/: AndroidManifest.xml
lib_pthread_key/src/main/cpp/: pthread_key_detect.cpp
lib_pthread_key/src/main/cpp/common/: Log.h
lib_pthread_key/src/main/cpp/libwechatbacktrace/: Backtrace.cpp  FpUnwinder.cpp
lib_pthread_key/src/main/cpp/libwechatbacktrace/include/: Backtrace.h  BacktraceDefine.h  MinimalRegs.h
lib_pthread_key/src/main/cpp/nativehelper/: managed_jnienv.cc
lib_pthread_key/src/main/java/com/vompom/pthread_key_detect/: PthreadKeyDetect.java
matrix-android-commons/: CMakeLists.txt  build.gradle
